public class Globals
{
    // Animations Trigger
    public static string rl_kick = "RL_K";
    public static string l_hook = "L_H";
    public static string rs_punch = "RS_P";
    public static string r_uppercut = "R_U";
    public static string m_back = "B_M";
    public static string m_for = "F_M";
    // Key values
    public static string sqr = "sqr";
    public static string trg = "trg";
    public static string cir = "cir";
    public static string x = "x";
    // Dpad clamp values
    public static float min = -1.0f;
    public static float max = 1.0f;
}
